<resources>
    <string name="app_name">Clock</string>
    <string name="bottom_nav_title_timer">Timer</string>
    <string name="bottom_nav_title_stopwatch">Stopwatch</string>
    <string name="bottom_nav_title_alarm">Alarm</string>
    <string name="alarm_list_repeat">Repeat</string>
    <string name="monday_short">mo</string>
    <string name="tuesday_short">tu</string>
    <string name="wednesday_short">we</string>
    <string name="thursday_short">th</string>
    <string name="friday_short">fr</string>
    <string name="saturday_short">sa</string>
    <string name="sunday_short">su</string>
    <string name="vibration_signal">Vibration</string>
    <string name="alarm_description">alarm description</string>
    <string name="delete">delete</string>
    <string name="no_alarms">There aren\'t any alarms yet...</string>
    <string name="every_day">every day</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="alarm">Alarm</string>
    <string name="delay">delay</string>
    <string name="dismiss">dismiss</string>
    <string name="solve_puzzle">solve the puzzle</string>
    <string name="puzzle">Puzzle</string>
    <string name="choose_puzzle_type">Choose the type of puzzle</string>
    <string name="first_degree_difficulty">The FIRST degree of difficulty</string>
    <string name="first_degree_difficulty_description">There are simple arithmetic expressions like <i>12+17</i> or <i>60-25</i>. We\'re sure, you can solve it quickly!</string>
    <string name="second_degree_difficulty">The SECOND degree of difficulty</string>
    <string name="second_degree_difficulty_description">There are some expressions with big integer numbers like <i>421*3</i> or simple linear equations like <i>11x = 132</i></string>
    <string name="third_degree_difficulty">The THIRD degree of difficulty</string>
    <string name="third_degree_difficulty_description">There are simple quadratic equations like <i>5x^2 − 14x + 17 = 0</i>. You can use discriminant or Vieta\'s theorem to solve it.</string>
    <string name="fourth_degree_difficulty">The FOURTH degree of difficulty</string>
    <string name="fourth_degree_difficulty_description">So, if you\'re real genius of math, you can solve the biquadrate equation like <i>ax^4 + bx^2 + c = 0</i>. It would be really cool, if you were solve it while alarm is ringing!</string>
    <string name="apply">apply</string>
    <string name="send_answer">send answer</string>
    <string name="difficulty_instruction1">evaluate math expression</string>
    <string name="difficulty_instruction2">find the minimal answer of equation</string>
    <string name="incorrect_answer">Incorrect answer!</string>

    <string name="alarm_notification_channel_description">Notifications about all enabled alarms</string>
    <string name="alarm_notification_channel_name">Alarm notifications</string>
    <string name="alarm_notification_content_title">There are some enabled alarms</string>

    <string name="timer_notification_channel_description">These notifications will show when timer runs</string>
    <string name="timer_notification_channel_name">Timer notifications</string>
    <string name="timer_notification_content_title">Timer is running now!</string>

    <string name="stopwatch_notification_channel_description">These notifications will show when stopwatch runs</string>
    <string name="stopwatch_notification_channel_name">Stopwatch notifications</string>
    <string name="stopwatch_notification_content_title">Stopwatch is running now!</string>

    <string name="choose_alarm_sound">Choose alarm sound</string>
    <string name="choose_custom_sound">Choose custom sound</string>

    <string name="alarm_sound_beep_beep">Beep-beep</string>
    <string name="alarm_sound_egor_track1">Egor track1</string>
    <string name="alarm_sound_egor_track2">Egor track2</string>
    <string name="alarm_sound_egor_track3">Egor track3</string>
    <string name="alarm_sound_happy_bells">Happy bells</string>
    <string name="alarm_sound_oxygen">Oxygen</string>
    <string name="alarm_sound_platinum">Platinum</string>
    <string name="alarm_sound_silver_smoke">Silver smoke</string>
    <string name="alarm_sound_walk_in_forest">Walk in forest</string>
    <string name="alarm_sound_custom">custom sound</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="pause">pause</string>
    <string name="cancel">cancel</string>
    <string name="resume">resume</string>
    <string name="settings">Settings</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="alarm_vibration_pattern">alarm vibration pattern</string>
    <string name="alarm_vibration_pattern_name1">ordinary vibration</string>
    <string name="alarm_vibration_pattern_name2">mono vibration</string>
    <string name="alarm_vibration_pattern_name3">cutting vibration</string>
    <string name="about_app">About application</string>
    <string name="about_app_text">The description of our app</string>
    <string name="timer_settings">Timer settings</string>
    <string name="stop">stop</string>
    <string name="interval">interval</string>
    <string name="time_is_up">Time is up!</string>
    <string name="choose_timer_ringtone">choose timer ringtone</string>
    <string name="timer_vibration">timer vibration</string>
    <string name="timer_sound_time_up">Time up</string>
    <string name="mavrodi_congratulation">Mavrodi\'s congratulation</string>
    <string name="timer_sound_flooding_balls">Flooding balls</string>
    <string name="timer_sound_glass_and_water">Glass and water</string>
</resources>