<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/radioGroupTimerSounds">
                <RadioButton
                    android:id="@+id/radioTimerSoundBeepBeep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_sound_beep_beep"/>
                <RadioButton
                    android:id="@+id/radioTimerSoundTimeUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sound_time_up"/>
                <RadioButton
                    android:id="@+id/radioTimerSoundMavrodiCongratulation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mavrodi_congratulation"/>
                <RadioButton
                    android:id="@+id/radioTimerSoundFloodingBalls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sound_flooding_balls"/>
                <RadioButton
                    android:id="@+id/radioTimerSoundGlassAndWater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timer_sound_glass_and_water"/>
            </RadioGroup>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>