<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoosePuzzleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonApplyAlarmPuzzle"
        app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/radioGroupAlarmPuzzles"
                        android:animateLayoutChanges="true">
                        <RadioButton
                            android:id="@+id/radioFirstAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/first_degree_difficulty"

                            />
                        <TextView
                            android:id="@+id/textFirstAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/first_degree_difficulty_description" />

                        <RadioButton
                            android:id="@+id/radioSecondAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/second_degree_difficulty"
                            android:drawableRight="@drawable/ic_apply"/>
                        <TextView
                            android:id="@+id/textSecondAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/second_degree_difficulty_description" />

                        <RadioButton
                            android:id="@+id/radioThirdAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/third_degree_difficulty"
                            android:drawableRight="@drawable/ic_apply"/>
                        <TextView
                            android:id="@+id/textThirdAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/third_degree_difficulty_description" />

                        <RadioButton
                            android:id="@+id/radioFourthAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fourth_degree_difficulty"
                            android:drawableRight="@drawable/ic_apply"/>
                        <TextView
                            android:id="@+id/textFourthAlarmPuzzleDifficulty"
                            style="@style/styleDescription1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/fourth_degree_difficulty_description" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonApplyAlarmPuzzle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_apply"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>