<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHoursIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/hours"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerHours"
        app:layout_constraintStart_toStartOf="@+id/numberPickerHours"
        app:layout_constraintBottom_toTopOf="@id/numberPickerHours" />
    <NumberPicker
        android:id="@+id/numberPickerHours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textBorderNumberPicker1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textMinutesIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/minutes"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintStart_toStartOf="@+id/numberPickerMinutes"
        app:layout_constraintBottom_toTopOf="@id/numberPickerMinutes" />
    <NumberPicker
        android:id="@+id/numberPickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSecondsIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/seconds"
        app:layout_constraintEnd_toEndOf="@+id/numberPickerSeconds"
        app:layout_constraintStart_toStartOf="@+id/numberPickerSeconds"
        app:layout_constraintBottom_toTopOf="@id/numberPickerSeconds" />
    <NumberPicker
        android:id="@+id/numberPickerSeconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBorderNumberPicker2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="200dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textBorderNumberPicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintEnd_toStartOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toBottomOf="@+id/textMinutesIs"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/textBorderNumberPicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberPickerMinutes"
        app:layout_constraintStart_toEndOf="@+id/numberPickerMinutes"
        app:layout_constraintTop_toBottomOf="@+id/textMinutesIs"
        android:layout_marginLeft="10dp"/>

    <Button
        style="@style/styleAlarmListButton"
        android:id="@+id/buttonTimerStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>